# datasketches-characterization

./: .gitattributes  .gitignore  .rat-excludes  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  ReqSketchAccuracyProfile20201015_180802GMT-07:00.tsv  ReqSketchAccuracyProfile20201017_150706GMT-07:00.tsv  octave-workspace  pom.xml
cpp/: CMakeLists.txt
cpp/matlab/: cpc_sketch_accuracy.m  cpc_sketch_deserialize_time.m  cpc_sketch_serialize_time.m  cpc_sketch_update_time.m  cpc_union_accuracy.m  cpc_union_update_time.m  distinct_counting_memory.m  distinct_counting_memory_small.m  distinct_counting_sketch_update.m  frequent_items_merge_time.m  frequent_items_sketch_int64_lgk10_deserialize_time.m  frequent_items_sketch_int64_lgk10_max_error.m  frequent_items_sketch_int64_lgk10_num_items.m  frequent_items_sketch_int64_lgk10_serialize_time.m  frequent_items_sketch_int64_lgk10_update_time.m  hll_sketch_accuracy.m  hll_sketch_update_time.m  hll_union_accuracy.m  hll_union_update_time.m  kll_merge_time.m  kll_sketch_error.m  kll_sketch_memory.m  kll_sketch_update_time.m  octave-workspace  req_merge_items.m  req_merge_time.m  req_sketch_items.m  req_sketch_update_time.m  tdigest_error_vs_rank.m  tdigest_memory.m  tdigest_rank_error.m  tdigest_size.m  tdigest_update_time.m  tdigest_vs_req_error_exp.m  theta_sketch_accuracy.m  theta_sketch_serialize_time.m  theta_sketch_serialized_size.m  theta_sketch_update_time.m  theta_union_accuracy.m  theta_union_update_time.m  (+4 more)
cpp/results/: aod_sketch_timing_lgk12_x8_gcc9.tsv  aod_union_timing_lgk12_32way_compact_trimmed_gcc9.tsv  cms_point_query.tsv  cms_point_query_high_skew.tsv  cms_point_query_low_skew.tsv  cms_point_query_medium_skew.tsv  cpc_sketch_accuracy_lgk12.tsv  cpc_sketch_accuracy_lgk26.tsv  cpc_sketch_memory_lgk11.tsv  cpc_sketch_memory_lgk12.tsv  cpc_sketch_memory_lgk26.tsv  cpc_sketch_memory_lgk4.tsv  cpc_sketch_memory_lgk5.tsv  cpc_sketch_timing_lgk10_gcc9.tsv  cpc_sketch_timing_lgk12_gcc9.tsv  cpc_union_accuracy_lgk12.tsv  cpc_union_timing_lgk10_16way_gcc9.tsv  cpc_union_timing_lgk10_32way_gcc9.tsv  cpc_union_timing_lgk10_8way_gcc9.tsv  cpc_union_timing_lgk12_16way_gcc9.tsv  cpc_union_timing_lgk12_32way_gcc9.tsv  frequent_items_merge_accuracy_lgk10_16_zipf07.tsv  frequent_items_merge_accuracy_lgk10_16_zipf11.tsv  frequent_items_merge_timing_string_lgk10_zipf11_long_copy.tsv  frequent_items_merge_timing_string_lgk10_zipf11_long_move.tsv  frequent_items_merge_timing_string_lgk10_zipf11_short_copy.tsv  frequent_items_merge_timing_string_lgk10_zipf11_short_move.tsv  frequent_items_sketch_accuracy_lgk10_zipf07.tsv  frequent_items_sketch_accuracy_lgk10_zipf11.tsv  frequent_items_sketch_int64_lgk10_geom0005.tsv  frequent_items_sketch_int64_lgk10_timing.tsv  frequent_items_sketch_int64_lgk10_zipf07.tsv  frequent_items_sketch_int64_lgk10_zipf07_bak.tsv  frequent_items_sketch_int64_lgk10_zipf07_max.tsv  frequent_items_sketch_int64_lgk10_zipf1.tsv  frequent_items_sketch_int64_lgk10_zipf11.tsv  frequent_items_sketch_int64_lgk10_zipf11_max.tsv  hll_sketch_accuracy_lgk12.tsv  hll_sketch_accuracy_lgk12_start_full_size.tsv  hll_sketch_memory_hll4_lgk11.tsv  (+65 more)
cpp/scripts/: plot_cms_frequency_slice.py  plot_cms_point_query.py
cpp/src/: cms_point_query_profile.cpp  cms_point_query_profile.hpp  count_min_sketch_frequency_profile.cpp  count_min_sketch_frequency_profile.hpp  counting_allocator.hpp  cpc_sketch_accuracy_profile.cpp  cpc_sketch_accuracy_profile.hpp  cpc_sketch_memory_profile.cpp  cpc_sketch_memory_profile.hpp  cpc_sketch_timing_profile.cpp  cpc_sketch_timing_profile.hpp  cpc_union_accuracy_profile.cpp  cpc_union_accuracy_profile.hpp  cpc_union_timing_profile.cpp  cpc_union_timing_profile.hpp  distinct_count_accuracy_profile.cpp  distinct_count_accuracy_profile.hpp  frequent_items_merge_timing_profile.cpp  frequent_items_merge_timing_profile.hpp  frequent_items_sketch_accuracy_profile.cpp  frequent_items_sketch_accuracy_profile.hpp  frequent_items_sketch_timing_profile.cpp  frequent_items_sketch_timing_profile.hpp  hll_cross_language_profile.cpp  hll_cross_language_profile.hpp  job_profile.cpp  (+68 more)
(+855 files in other folders)
